--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,6 +128,7 @@
      <Compile Include="Assets\Scripts\Enemy\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Enemy\enemyControl.cs" />
+     <Compile Include="Assets\Scripts\Environment\Destructable.cs" />
      <Compile Include="Assets\Scripts\Environment\GameCamera.cs" />
      <Compile Include="Assets\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\Arrow.cs" />
@@ -141,6 +142,7 @@
      <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\DurationTrapObj.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\FallingDeath.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\FlameTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\InteractTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\MovingPlatform.cs" />
@@ -207,10 +209,10 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>C:/Users/faculty/Desktop/Senior Project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>C:/Users/faculty/Desktop/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
