--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,7 +128,6 @@
      <Compile Include="Assets\Scripts\Enemy\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Enemy\enemyControl.cs" />
-     <Compile Include="Assets\Scripts\Environment\Destructable.cs" />
      <Compile Include="Assets\Scripts\Environment\GameCamera.cs" />
      <Compile Include="Assets\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\Arrow.cs" />
@@ -209,10 +208,10 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>C:/Users/faculty/Desktop/Senior Project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>C:/Users/faculty/Desktop/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
